testsuite/tests/properties/invalid_map/too_many_args/test.lkt
from common import FooNode, NumberNode

class ListNode: FooNode {
    @parse_field nb_list: ASTList[NumberNode]
    @exported fun prop(): Array[Entity[NumberNode]] =
        self.nb_list.imap((x, y, z) => x)
}
